--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,12 @@
 	http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
   <display-name>Jersey Web Application</display-name>
 
+  <welcome-file-list>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+  </welcome-file-list>
+
   <servlet>
     <servlet-name>jersey-serlvet</servlet-name>
     <servlet-class>
